--- a/spring-boot-jsp/pom.xml
+++ b/spring-boot-jsp/pom.xml
@@ -49,6 +49,24 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			
+			
+			
+			<plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>2.2.0</version>
+        <configuration>
+          <version>1</version>
+          <projectId>for-jsp-project</projectId>
+        </configuration>
+      </plugin>
+			
+			
+			
+			
+			
 		</plugins>
 	</build>
 
